Update AgentMessagingService and related components for improved messaging workflow
- Refactored sendMessage method with comprehensive API request structure
- Added more robust error handling and detailed logging in messaging methods
- Updated message sending logic to include platform-specific headers and metadata
- Enhanced token management and conversation initialization process
- Improved input validation and error reporting across messaging services

--- a/force-app/main/default/classes/AgentMessagingService.cls
+++ b/force-app/main/default/classes/AgentMessagingService.cls
@@ -5,12 +5,14 @@ public with sharing class AgentMessagingService {
     private static final String CLIENT_VERSION = '1';
     private static final String AUTH_URL = '/authorization/unauthenticated/access-token';
     private static final String CONVRESATION_URL = '/conversation';
-    private static final String MESSAGE_URL = '/iamessage/api/v2/conversation/{{conversationId}}/message';
+    private static final String MESSAGE_URL = '/conversation/{{conversationId}}/message';
     private static final String BASE_URL = 'https://orgfarm-0f131521a0-dev-ed.develop.my.salesforce-scrt.com/iamessage/api/v2';
     private static final String ISSUER = UserInfo.getOrganizationId(); // Your org ID
     private static final String SUBJECT = UserInfo.getUserId(); // The user's ID
     private static final Integer TOKEN_EXPIRY = 300; // 5 minutes in seconds
     private static final String CERTIFICATE_NAME = 'Utter_Sense_Certificate'; // Must match exactly with the certificate name in Setup
+    private static final String PLATFORM = 'Web';
+    private static final String CAPABILITIES_VERSION = '1';
     
     // Inner class to handle responses
     public class MessagingResponse {
@@ -252,66 +254,130 @@ public with sharing class AgentMessagingService {
     /**
      * @description Sends a message in an existing conversation
      * @param conversationId The ID of the conversation
-     * @param text The message text to send
+     * @param message The message text to send
      * @param replyToMessageId The ID of the message being replied to
+     * @param accessToken The access token used to create the conversation
      * @return MessagingResponse containing the message details
      */
     @AuraEnabled
-    public static MessagingResponse sendMessage(String conversationId, String text, String replyToMessageId) {
+    public static MessagingResponse sendMessage(String conversationId, String message, String replyToMessageId, String accessToken) {
         try {
+            System.debug('=== Starting sendMessage method ===');
+            System.debug('Input Parameters - conversationId: ' + conversationId + ', message length: ' + (message != null ? message.length() : 0) + ', replyToMessageId: ' + replyToMessageId);
+            
             // Initialize response
             MessagingResponse response = new MessagingResponse();
             
             // Input validation
             if (String.isBlank(conversationId)) {
+                System.debug(LoggingLevel.ERROR, 'Validation failed: Conversation ID is required');
                 response.error = 'Conversation ID is required';
                 return response;
             }
             
-            if (String.isBlank(text)) {
+            if (String.isBlank(message)) {
+                System.debug(LoggingLevel.ERROR, 'Validation failed: Message text is required');
                 response.error = 'Message text is required';
                 return response;
             }
+
+            if (String.isBlank(accessToken)) {
+                System.debug(LoggingLevel.ERROR, 'Validation failed: Access token is required');
+                response.error = 'Access token is required';
+                return response;
+            }
             
-            // Prepare the request body
-            Map<String, Object> requestBody = new Map<String, Object>{
-                'text' => text
-            };
+            // Create message structure
+            Map<String, Object> requestBody = new Map<String, Object>();
+            
+            // Create the message object with required fields as per API docs
+            Map<String, Object> messageObj = new Map<String, Object>();
+            messageObj.put('id', generateUUID());
+            messageObj.put('messageType', 'StaticContentMessage');
             
             if (String.isNotBlank(replyToMessageId)) {
-                requestBody.put('replyToMessageId', replyToMessageId);
+                messageObj.put('inReplyToMessageId', replyToMessageId);
+                System.debug('Added replyToMessageId to message object: ' + replyToMessageId);
             }
+            else {
+                messageObj.put('inReplyToMessageId', '');
+            }
+            
+            // Create the staticContent object with required fields
+            Map<String, Object> staticContent = new Map<String, Object>();
+            staticContent.put('formatType', 'Text');
+            staticContent.put('text', message);
+            messageObj.put('staticContent', staticContent);
+            
+            // Build the complete request structure with all required fields
+            requestBody.put('message', messageObj);
+            requestBody.put('esDeveloperName', BOT_DEVELOPER_NAME);
+            if (String.isNotBlank(replyToMessageId)) {
+                requestBody.put('isNewMessagingSession', false);
+            }
+            else {
+                requestBody.put('isNewMessagingSession', true);
+            }
+            requestBody.put('language', 'en');
+            
+            System.debug('Request Body: ' + JSON.serializePretty(requestBody));
             
             // Formulate the endpoint
             String endpoint = BASE_URL + MESSAGE_URL.replace('{{conversationId}}', conversationId);
+            System.debug('Endpoint URL: ' + endpoint);
             
             // Create and configure the HTTP request
             HttpRequest req = new HttpRequest();
             req.setEndpoint(endpoint);
             req.setMethod('POST');
             req.setHeader('Content-Type', 'application/json');
-            req.setHeader('Authorization', 'Bearer ' + UserInfo.getSessionId());
-            System.debug('Authorization Header Added: Bearer ' + UserInfo.getSessionId().substring(0, 10) + '...');
+            req.setHeader('Authorization', 'Bearer ' + accessToken);
             req.setBody(JSON.serialize(requestBody));
+            
+            // Add additional headers that might be required
+            req.setHeader('X-Salesforce-Client-Type', CLIENT_TYPE);
+            req.setHeader('X-Salesforce-Client-Version', CLIENT_VERSION);
+            
+            System.debug('Request Headers: ' + req.getHeader('Content-Type'));
+            System.debug('Request Method: ' + req.getMethod());
+            System.debug('Authorization Header Added: Bearer ' + accessToken.substring(0, Math.min(accessToken.length(), 10)) + '...');
             
             // Send the request
             Http http = new Http();
+            System.debug('Sending HTTP request...');
             HttpResponse res = http.send(req);
             
             // Process the response
+            System.debug('Response Status Code: ' + res.getStatusCode());
+            System.debug('Response Status: ' + res.getStatus());
+            System.debug('Response Body: ' + res.getBody());
+            
             if (res.getStatusCode() == 201 || res.getStatusCode() == 200) {
+                System.debug('Request successful, processing response body...');
                 Map<String, Object> responseBody = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
                 response.messageId = (String) responseBody.get('messageId');
-                response.text = text;
+                response.text = (String) responseBody.get('text');
+                System.debug('Message sent successfully. Message ID: ' + response.messageId);
             } else {
+                System.debug(LoggingLevel.ERROR, 'Request failed with status code: ' + res.getStatusCode());
                 response.error = 'Failed to send message: ' + res.getStatusCode() + ' ' + res.getStatus();
+                if (String.isNotBlank(res.getBody())) {
+                    response.error += ' - ' + res.getBody();
+                }
+                System.debug(LoggingLevel.ERROR, 'Error: ' + response.error);
             }
             
             return response;
         } catch (Exception e) {
+            System.debug(LoggingLevel.ERROR, 'Exception Type: ' + e.getTypeName());
+            System.debug(LoggingLevel.ERROR, 'Exception Message: ' + e.getMessage());
+            System.debug(LoggingLevel.ERROR, 'Stack Trace: ' + e.getStackTraceString());
+            
             MessagingResponse response = new MessagingResponse();
             response.error = 'Error sending message: ' + e.getMessage();
             return response;
+        } finally {
+            System.debug('=== Ending sendMessage method ===');
         }
     }
 
